apps/base/homarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    app.kubernetes.io/name: homarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v1.8.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 7575
              name: homarr
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /api/health/live
              port: homarr
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health/ready
              port: homarr
            initialDelaySeconds: 60
            periodSeconds: 5
          volumeMounts:
            - name: homarr-data
              mountPath: /appdata
      volumes:
        - name: homarr-data
          persistentVolumeClaim:
            claimName: homarr
      restartPolicy: Always
