apps/base/homarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    app.kubernetes.io/name: homarr
spec:
  selector:
    app.kubernetes.io/name: homarr
  ports:
    - name: homarr
      port: 7575
